2011-10-05  Jer Noble  <jer.noble@apple.com>

        Enable WEB_AUDIO by default in the WebKit/mac port.
        https://bugs.webkit.org/show_bug.cgi?id=68587

        Reviewed by Simon Fraser.

        * Configurations/FeatureDefines.xcconfig:
        * wtf/Platform.h:

2011-10-05  Filip Pizlo  <fpizlo@apple.com>

        Assertion hit in JSC::DFG::SpeculativeJIT::compile on SL bots
        https://bugs.webkit.org/show_bug.cgi?id=69346

        Reviewed by Oliver Hunt.
        
        Removed the assertion, since it was completely wrong for op_post_inc.
        Short of having specialized PostInc nodes in the DFG, there is no
        robust way of asserting what this assertion was trying to assert while
        also supporting op_post_inc.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::parseBlock):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):

2011-10-05  Geoffrey Garen  <ggaren@apple.com>

        Added a simpler mechanism for registering one-off finalizers
        https://bugs.webkit.org/show_bug.cgi?id=69466

        Reviewed by Oliver Hunt.

        * heap/Heap.cpp:
        (JSC::Heap::addFinalizer):
        (JSC::Heap::FinalizerOwner::finalize):
        * heap/Heap.h: New function for adding an arbitrary finalizer for an
        arbitrary cell without declaring any special classes or Handles yourself.

        * JavaScriptCore.exp: Fix build.

        * runtime/Executable.cpp:
        (JSC::ExecutableBase::clearCode):
        (JSC::ExecutableBase::clearCodeVirtual):
        (JSC::EvalExecutable::clearCodeVirtual):
        (JSC::ProgramExecutable::clearCodeVirtual):
        (JSC::FunctionExecutable::discardCode):
        (JSC::FunctionExecutable::clearCodeVirtual):
        * runtime/Executable.h:
        (JSC::ExecutableBase::finishCreation): Use the new mechanism for eager