@@ -149,11 +149,17 @@ inline float nextafterf(float x, float y) { return x > y ? x - FLT_EPSILON : x +
 inline double copysign(double x, double y) { return _copysign(x, y); }
 inline int isfinite(double x) { return _finite(x); }
 
-// MSVC's math.h does not currently supply log2.
+// MSVC's math.h does not currently supply log2 or log2f.
 inline double log2(double num)
 {
     // This constant is roughly M_LN2, which is not provided by default on Windows.
     return log(num) / 0.693147180559945309417232121458176568;
+}
+
+inline float log2f(float num)
+{
+    // This constant is roughly M_LN2, which is not provided by default on Windows.
+    return logf(num) / 0.693147180559945309417232121458176568f;
 }
 
 // Work around a bug in Win, where atan2(+-infinity, +-infinity) yields NaN instead of specific values.
