@@ -1,3 +1,15 @@
+2011-10-05  Chris Rogers  <crogers@google.com>
+
+        Define a log2f() function for Windows in wtf/MathExtras.h
+        https://bugs.webkit.org/show_bug.cgi?id=69491
+
+        Reviewed by Darin Adler.
+
+        No new tests. This change is tested in existing layout tests.
+
+        * webaudio/AudioParamTimeline.cpp:
+        (WebCore::AudioParamTimeline::valuesForTimeRangeImpl):
+
 2011-10-05  Erik Arvidsson  <arv@chromium.org>
 
         window.location.href and others needlessly decodes URI-encoded characters
